Change font and add text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Segoe UI", sans-serif;
+      font-family: "Times New Roman", sans-serif;
       background: linear-gradient(135deg, #ffe6ec, #fff5f7);
       display: flex;
       justify-content: center;
@@ -86,15 +86,15 @@
     <!-- Replace with your own photo -->
     <img src="photo.png" alt="Us together" />
 
-    <h1>Will you be my ValenTiet? 💗</h1>
+    <h1>Will you be my ValenTiet? 💌</h1>
 
     <div class="buttons">
-      <button id="noBtn">No 🙈</button>
-      <button id="yesBtn">Yes 💘</button>
+      <button id="noBtn">Maybe next year 😿</button>
+      <button id="yesBtn">Yes 🙌</button>
     </div>
 
     <div class="message" id="loveMsg">
-      Good. You don't have a choice!
+      Thanks for choosing to be my Valentines Tom 💖  
     </div>
   </div>
 
@@ -126,7 +126,7 @@
 
     yesBtn.addEventListener("click", () => {
       msg.style.display = "block";
-      yesBtn.innerText = "Best choice ever 🥰";
+      yesBtn.innerText = "Best choice ever Tom 🥰";
     });
   </script>
 </body>
