--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Times New Roman", sans-serif;
+      font-family: "Montserrat", sans-serif;
       background: linear-gradient(135deg, #ffe6ec, #fff5f7);
       display: flex;
       justify-content: center;
@@ -22,7 +22,7 @@
       padding: 30px;
       border-radius: 25px;
       box-shadow: 0 20px 50px rgba(0,0,0,0.15);
-      max-width: 400px;
+      max-width: 500px;
       position: relative;
     }
 
@@ -45,7 +45,8 @@
 
     button {
       border: none;
-      padding: 14px 32px;
+      padding: 14px 50px;
+      font-family: "Montserrat", sans-serif;
       font-size: 18px;
       border-radius: 999px;
       cursor: pointer;
