--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Montserrat", sans-serif;
+      font-family: "Arapey", sans-serif;
       background: linear-gradient(135deg, #ffe6ec, #fff5f7);
       display: flex;
       justify-content: center;
@@ -46,7 +46,7 @@
     button {
       border: none;
       padding: 14px 50px;
-      font-family: "Montserrat", sans-serif;
+      font-family: "Arapey", sans-serif;
       font-size: 18px;
       border-radius: 999px;
       cursor: pointer;
