--- a/index.html
+++ b/index.html
@@ -85,6 +85,25 @@
       margin-top: 20px;
       display: none;
     }
+
+    .tear {
+      position: absolute;
+      font-size: 22px;
+      pointer-events: none;
+      animation: fall 900ms ease-out forwards;
+    }
+
+    @keyframes fall {
+      0% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(40px) scale(0.8);
+      }
+    }
+
   </style>
 </head>
 
@@ -117,15 +136,34 @@
 
     function moveButton() {
       const cardRect = card.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
 
-      const maxX = cardRect.width - noBtn.offsetWidth;
-      const maxY = cardRect.height - noBtn.offsetHeight - 60;
+      // spawn tears at CURRENT position before moving
+      spawnTears(btnRect.left, btnRect.top);
+
+      const maxX = cardRect.width - btnRect.width;
+      const maxY = cardRect.height - btnRect.height;
 
       const randX = Math.random() * maxX;
       const randY = Math.random() * maxY;
 
       noBtn.style.left = randX + "px";
       noBtn.style.top = randY + "px";
+    }
+
+    function spawnTears(x, y) {
+      for (let i = 0; i < 4; i++) {
+        const tear = document.createElement("div");
+        tear.innerText = "😭";
+        tear.className = "tear";
+
+        tear.style.left = x + (Math.random() * 30 - 15) + "px";
+        tear.style.top = y + (Math.random() * 20 - 10) + "px";
+
+        document.body.appendChild(tear);
+
+        setTimeout(() => tear.remove(), 900);
+      }
     }
 
     // Run away when mouse gets close
