--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
 
     <div class="message" id="loveMsg">
-      Thanks for choosing to be my Valentines Tom 💖  
+      Thanks for choosing to be my Valentines, Harry 💖  
     </div>
   </div>
 
